Birth and Death Rate Work

--- a/Starpeace/Starpeace.csproj
+++ b/Starpeace/Starpeace.csproj
@@ -8,5 +8,6 @@
   <ItemGroup>
     <Folder Include="Rates\" />
     <Folder Include="Types\" />
+    <Folder Include="Storage\" />
   </ItemGroup>
 </Project>
