Add testing data
Adds testing data and reworks population

--- a/Starpeace/Starpeace.csproj
+++ b/Starpeace/Starpeace.csproj
@@ -13,5 +13,6 @@
     <Folder Include="Server\" />
     <Folder Include="Client\" />
     <Folder Include="ClientServerProtocol\" />
+    <Folder Include="Testing\" />
   </ItemGroup>
 </Project>
