--- a/Starpeace/Starpeace.csproj
+++ b/Starpeace/Starpeace.csproj
@@ -14,5 +14,11 @@
     <Folder Include="Client\" />
     <Folder Include="ClientServerProtocol\" />
     <Folder Include="Testing\" />
+    <Folder Include="Data\" />
+    <Folder Include="Data\Models\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="8.0.11" />
+    <PackageReference Include="Insight.Database" Version="6.2.3" />
   </ItemGroup>
 </Project>
